--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -5,11 +5,38 @@
     padding:1em 1.2em;
     margin-bottom: 2em;
     background-color: #333;
-    color: #fff; 
+    color: #fff;
+    
 }
 
 .logo{
     display:flex;
     justify-content: center;
     align-items: center;
+    
+}
+
+.logo h1{
+    margin-left: .3em;
+}
+
+.link_items{
+    display:flex;
+    list-style: none;
+}
+
+.link_items li{
+    margin-right: 1.4em;
+}
+
+.link_items a{
+    color:#fff;
+    text-decoration: none;
+    padding: 5px;
+    transition: .4s;
+    border-bottom: 2px solid transparent;
+}
+
+.link_items a:hover{
+    border-color: #fff;
 }
