--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,3 +1,46 @@
-.card{
-    
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2em 1em;
+    margin-bottom: 2em;
+    width: 22%;
+    border-radius: 1em;
+    border: 1px solid #e33d33;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.5);
+    background-color: #333;
+    color: #fff;
+}
+
+.id {
+    background-color: #e33d33;
+    margin: 1em 0;
+    border-radius: 5px;
+    padding: 5px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    text-transform: capitalize;
+    margin-bottom: 1em;
+    font-size: 1.3em;
+}
+
+.btn {
+    text-decoration: none;
+    background-color: #fff;
+    color: #222;
+    padding: 0.7em 1.2em;
+    border-radius: 6px;
+    font-weight: bold;
+    transition: 0.4s;
+}
+
+.btn:hover {
+    background-color: #e33d33;
+    color: #fff;
 }
